Fix wrapping due to fix for sums in Firefox
https://github.com/mathquill/mathquill/pull/417#discussion-diff-31675548

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -5,6 +5,7 @@
     width: 100%;
     padding: 2px;
     .box-sizing(border-box); // supported by IE8+: http://caniuse.com/css3-boxsizing
+    white-space: nowrap;
     overflow: hidden;
     vertical-align: middle;
     // &:after is a fix for
